--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -13,11 +13,10 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 <body>
 
   <%- include(`${templatePath}/shared/comp_progressBar`) %>
-  <%- include(`${templatePath}/shared/block_nav_header_back`, { 
+  <%- include(`${templatePath}/shared/nav_header_back`, { 
     PageUrl:`${websitePath}/`,
     headerBackgroundColor:`WhiteBgTrans`,
     arrTxtColor:``,
-
     }) %>
 
 
@@ -73,20 +72,20 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
         <div class="element">
 
           <h3><strong>Context</strong></h3>
-          <h4>I have always been passionate about enhancing design quality and improving management efficiency. Since late 2020, I have been designing and building my website, creating a design system that focuses on component organization for easy comparison and reuse. This system ensures scalability and implements effective UX design patterns, ultimately contributing to a more cohesive and user-friendly experience.
-          </h4>
+          <h5>I have always been passionate about enhancing design quality and improving management efficiency. Since late 2020, I have been designing and building my website, creating a design system that focuses on component organization for easy comparison and reuse. This system ensures scalability and implements effective UX design patterns, ultimately contributing to a more cohesive and user-friendly experience.
+          </h5>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
           <h3><strong>Main goal</strong></h3>
-          <h4>The primary objective of this design system is to center on the showcase of UX case studies. It's
+          <h5>The primary objective of this design system is to center on the showcase of UX case studies. It's
             essential
             that the overall design thinking structure is presented clearly and is user-friendly. Key information should
             be displayed by default. While users should have the option to delve deeper if desired, the design should
             also
             facilitate quick scanning without requiring excessive time spent on a single case study.
-          </h4>
+          </h5>
         </div>
       </div>
     </div>
@@ -95,33 +94,33 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
       <div class="Grid-cell">
         <div class="element">
           <h3><strong>Timeline</strong></h3>
-          <h4>2022 - present</h4>
+          <h5>2022 - present</h5>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
           <h3><strong>Skills</strong></h3>
-          <h4>Design System</h4>
-          <h4>Responsive design </h4>
-          <h4>HTML&#47;CSS&#47;JavaScript</h4>
+          <h5>Design System</h5>
+          <h5>Responsive design </h5>
+          <h5>HTML&#47;CSS&#47;JavaScript</h5>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
           <h3><strong>Role</strong></h3>
-          <h4>Design</h4>
-          <h4>Implement</h4>
-          <h4>Test</h4>
-          <h4>Iterate</h4>
+          <h5>Design</h5>
+          <h5>Implement</h5>
+          <h5>Test</h5>
+          <h5>Iterate</h5>
 
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
           <h3><strong>Tool</strong></h3>
-          <h4>VS Code</h4>
-          <h4>WebAIM</h4>
-          <h4>Photoshop</h4>
+          <h5>VS Code</h5>
+          <h5>WebAIM</h5>
+          <h5>Photoshop</h5>
         </div>
       </div>
     </div>
