design system and footer

--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -4004,8 +4004,10 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
     version:``,  message:``}) %>
 
   <%- include(`${templatePath}/shared/comp_modal`) %>
-  <%- include(`${templatePath}/shared/comp_backTop`) %>
-  <%- include(`${templatePath}/shared/block_nav_footer`) %>
+
+  <%- include(`${templatePath}/shared/footer25`) %>
+
+  
   <!-- Shared across the platform -->
 </body>
 
