--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -423,7 +423,7 @@
 
   </section>
 
-  <%- include(`${templatePath}/shared/block_footer25`, {sectionName:'Contact'}) %>
+  <%- include(`${templatePath}/shared/footer25`) %>
 
   <!-- Img Modal -->
   <div id="modal" class="modal">
