--- a/templates/workhub/index.ejs
+++ b/templates/workhub/index.ejs
@@ -420,7 +420,7 @@
 
   </section>
 
-  <%- include(`${templatePath}/shared/block_footer25`, {sectionName:'Contact'}) %>
+  <%- include(`${templatePath}/shared/footer25`, {sectionName:'Contact'}) %>
 
   <!-- Img Modal -->
   <div id="modal" class="modal">
