--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -191,8 +191,8 @@
 
 
     <div class="wrapper">
-      <div class="Grid Grid--full Grid--gutter">
-        <div class="Grid-cell cardNoEffect1">
+      <div class="Grid Grid--full Grid--gutter cardNoEffect1">
+        <div class="Grid-cell">
           <div class="element">
             <p class="card25CardMeta">Business - Facing • Q3 2025 (Paused)
 
@@ -270,8 +270,9 @@
 
 
     <div class="wrapper">
-      <div class="Grid Grid--full Grid--gutter">
-        <div class="Grid-cell cardNoEffect1">
+      <div class="Grid Grid--full Grid--gutter cardNoEffect1">
+        <div class="Grid-cell">
+
           <div class="element">
             <p class="card25CardMeta">Consumer - Facing • Q3 2025 • Concept + IA direction (paused)
 
@@ -288,8 +289,8 @@
     </div>
     <div class="spacingLarge"></div>
     <div class="wrapper">
-      <div class="Grid Grid--full Grid--gutter">
-        <div class="Grid-cell cardNoEffect1">
+      <div class="Grid Grid--full Grid--gutter cardNoEffect1">
+        <div class="Grid-cell">
           <div class="element">
             <p class="card25CardMeta">Concept Exploration • Q4 2025</p>
             <h2 class="card25CardTitle">Explored an alternative marketplace model to reduce Gear-First UX friction</h2>
@@ -357,18 +358,27 @@
     <div class="wrapper">
       <div class="Grid Grid--full Grid--gutter">
         <div class="element">
-          <div class="paddingL borderRadiusL gradient_background1">
+          <div class="paddingL borderRadiusL gradient_background1 displayDesktop">
             <a href="/design_system/">
-              <img class="displayDesktop" src="/projectImages/site25_desktop.svg" alt="Design System">
-              <img class="displayTablet" src="/projectImages/site25_tablet.svg" alt="Design System">
-              <img class="displayMobile" src="/projectImages/site25_mobile.svg" alt="Design System">
+              <img src="/projectImages/site25_desktop.svg" alt="Design System">
+            </a>
+          </div>
+
+          <div class="paddingL borderRadiusL gradient_background1 displayTablet">
+            <a href="/design_system/">
+              <img src="/projectImages/site25_tablet.svg" alt="Design System">
+            </a>
+          </div>
+ 
+          <div class="paddingL borderRadiusL gradient_background1 displayMobile">
+            <a href="/design_system/">
+              <img src="/projectImages/site25_mobile.svg" alt="Design System">
             </a>
           </div>
         </div>
+
+
       </div>
-
-
-    </div>
 
   </section>
 
