--- a/templates/shared/card_explorations.ejs
+++ b/templates/shared/card_explorations.ejs
@@ -12,7 +12,7 @@
         <div class="row centerVer">
           <h4 class="fontWeight500"><%= cardTitle %></h4>
             <a href="<%= linkURL %>" class="textUnderline paddingS">
-              <h6 class="fontWeight300">View Project</h6>
+              <h6 class="fontWeight300">View</h6>
             </a>
         </div>
         <h5><%= cardDescription %></h5>
