--- a/templates/resume2025/index.ejs
+++ b/templates/resume2025/index.ejs
@@ -68,11 +68,11 @@
       </div>
     </div>
 
-    <%- include(`${templatePath}/shared/base_divider_site25`, {
+    <%- include(`${templatePath}/shared/divider25`, {
       sectionName:'Experience',
       topSpacing:'',
       bottomSpacing:'',
-      dividerSpacing:'spacingMedium'
+      topNbottomSpacing:'spacingMedium'
       }) %>
 
     <div class="Grid Grid--gutters Grid--full">
@@ -115,11 +115,11 @@
         </div>
       </div>
     </div>
-    <%- include(`${templatePath}/shared/base_divider_site25`, {
+    <%- include(`${templatePath}/shared/divider25`, {
       sectionName:'Education',
       topSpacing:'',
       bottomSpacing:'',
-      dividerSpacing:'spacingMedium'
+      topNbottomSpacing:'spacingMedium'
       }) %>
 
   <div class="Grid Grid--gutters Grid--full">
