--- a/templates/workhub/index.ejs
+++ b/templates/workhub/index.ejs
@@ -60,11 +60,11 @@
       </div>
 
     </div>
-    <%- include(`${templatePath}/shared/base_divider_site25`, {
+    <%- include(`${templatePath}/shared/divider25`, {
       sectionName:'Case Studies',
       topSpacing:'spacingMedium',
       bottomSpacing:'spacingXLarge',
-      dividerSpacing:''
+      topNbottomSpacing:''
       }) %>
 
 
@@ -262,7 +262,7 @@
 
 
   <section id="explorations" data-nav="explorations">
-    <%- include(`${templatePath}/shared/base_divider_site25`, {sectionName:'Explorations'}) %>
+    <%- include(`${templatePath}/shared/divider25`, {sectionName:'Explorations'}) %>
 
 
     <%- include(`${templatePath}/shared/titleDescription25`, {
@@ -370,7 +370,7 @@
   </section>
 
   <section id="contact" data-nav="contact">
-    <%- include(`${templatePath}/shared/base_divider_site25`, {sectionName:'Contact'}) %>
+    <%- include(`${templatePath}/shared/divider25`, {sectionName:'Contact'}) %>
 
     <div class="wrapper">
       <div class="Grid Grid--full Grid--gutter">
